--- a/index.html
+++ b/index.html
@@ -3,38 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to AI Test</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 20px;
-            background-color: #f0f0f0;
-        }
-        .content {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-        h1, h2 {
-            color: #333;
-        }
-        h1 {
-            text-align: center;
-            color: #2c3e50;
-        }
-    </style>
+    <title>AI Test Page</title>
 </head>
 <body>
     <h1>Welcome to AI Test</h1>
+    <p>This is a simple test page created with AI assistance.</p>
     <div class="content">
         <h2>About</h2>
-        <p>This is a simple test page for our GitHub repository.</p>
-        <p>This page demonstrates basic HTML structure.</p>
+        <p>This page demonstrates basic HTML structure and will be enhanced with CSS styling.</p>
     </div>
 </body>
 </html>
