Add new content sections to homepage

--- a/index.html
+++ b/index.html
@@ -9,9 +9,35 @@
 <body>
     <h1>Welcome to AI Test</h1>
     <p>This is a simple test page created with AI assistance.</p>
+    
     <div class="content">
         <h2>About</h2>
         <p>This page demonstrates basic HTML structure and will be enhanced with CSS styling.</p>
+    </div>
+
+    <div class="content">
+        <h2>Features</h2>
+        <ul>
+            <li>Responsive Design</li>
+            <li>Modern CSS Styling</li>
+            <li>Clean Code Structure</li>
+        </ul>
+    </div>
+
+    <div class="content">
+        <h2>Project Gallery</h2>
+        <div class="gallery">
+            <div class="gallery-item">Project 1</div>
+            <div class="gallery-item">Project 2</div>
+            <div class="gallery-item">Project 3</div>
+        </div>
+    </div>
+
+    <div class="content" id="contact">
+        <h2>Contact Us</h2>
+        <p>Email: example@domain.com</p>
+        <p>Phone: (555) 123-4567</p>
+        <p>Address: 123 Main St, City, State 12345</p>
     </div>
 </body>
 </html>
